--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: #fdfcff;
+    --background: #f5f5f5;
     --foreground: #1a1c1e;
     --card: #fdfcff;
     --card-foreground: #1a1c1e;
@@ -15,13 +15,13 @@
     --secondary: #545f70;
     --secondary-foreground: #1a1c1e;
     --muted: #dfe2eb;
-    --muted-foreground: #43474e;
+    --muted-foreground: #888e99;
     --accent: #f1f0f4;
     --accent-foreground: #2f3033;
     --destructive: #ba1a1a;
     --destructive-foreground: #ffffff;
     --border: #dfe2eb;
-    --input: #dfe2eb;
+    --input: #babbc0;
     --ring: #d3e3ff;
     --radius: 0.5rem;
   }
