--- a/app/globals.css
+++ b/app/globals.css
@@ -62,3 +62,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+.h1 {
+  @apply text-3xl font-semibold
+}
+
+.h2 {
+  @apply text-2xl font-medium
+}
